...
                                <constraint firstAttribute="width" constant="163" id="od9-zc-jeM"/>
                            </constraints>
                        </imageView>
                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvQ-0X-YN3">
                            <rect key="frame" x="56" y="384" width="104" height="27"/>
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                            <state key="normal" title="Keep me logged in">
                                <color key="titleColor" red="0.039215686270000001" green="0.69803921570000005" blue="0.6588235294" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                            </state>
                            <connections>
                                <action selector="actionCheck" destination="-1" eventType="touchUpInside" id="7m0-sK-KF5"/>
                            </connections>
                        </button>
...
                            <rect key="frame" x="40" y="330" width="240" height="50"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="50" id="err-ui-7b8"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                            <state key="normal" title="LOGIN">
                                <color key="titleColor" red="0.039215686274509803" green="0.69803921568627447" blue="0.6588235294117647" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                            </state>
                            <connections>
                                <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="LT5-4c-5Tr"/>
                            </connections>
                        </button>
...
